Account modal Responsive changes, Bulletin and drive modal small changes Hardik_Maliya

--- a/index.html
+++ b/index.html
@@ -119,15 +119,15 @@
             </div>
             <div class="modal-body pt-40 px-30">
               <div class="d-flex flex-column justify-content-center align-items-center gap-20">
-                <span class="d-inline-block text-danger fs-16 fw-normal">Select which option suits your needs, both can be applied.</span>
+                <span class="d-inline-block text-danger fs-16 fw-normal text-center">Select which option suits your needs, both can be applied.</span>
                 <div class="d-flex align-items-start justify-content-center gap-40 position-relative w-100">
                   <p class="m-0 text-primary fs-16 fw-normal lh-1 text-center">Will you be offering work to other 3rd party <br> Trucking Companies? </p>
-                  <input class="form-check-input form-check-account position-absolute top-0 end-0" type="checkbox" name="option" value="1">
+                  <input class="form-check-input form-check-account createaccount-first-check position-absolute position-sm-relative top-0 end-0" type="checkbox" name="option" value="1">
                 </div>
                 <p class="m-0 text-primary fs-20 fw-bold lh-1">OR</p>
                 <div class="d-flex align-items-start justify-content-center gap-40 position-relative w-100">
                   <p class="m-0 text-primary fs-16 fw-normal lh-1 text-center">Will you be offering work to other 3rd party <br> Trucking Companies? </p>
-                  <input class="form-check-input form-check-account position-absolute top-0 end-0" type="checkbox" name="option" value="1">
+                  <input class="form-check-input form-check-account createaccount-first-check position-absolute position-sm-relative top-0 end-0" type="checkbox" name="option" value="1">
                 </div>
               </div>
             </div>
