--- a/dashboard.html
+++ b/dashboard.html
@@ -1609,6 +1609,117 @@
                 </div>
             </div>
         </div>
+
+        <!-- maddie modal start  -->
+         <div class="meddie-modal position-absolute top-0 start-0 ms-24">
+            <div class="maddie-custom-window">
+                <div class="maddie-header">
+                    <div class="d-flex align-items-center gap-2">
+                        <button class="maddie-btn-icon"><i class="bi bi-share"></i></button>
+                        <button class="maddie-btn-icon text-danger"><i class="bi bi-exclamation-triangle"></i></button>
+                        <div class="maddie-title ms-2">Maddie LE</div>
+                    </div>
+                    <div class="d-inline-flex align-items-center gap-16">
+                        <button class="maddie-btn-icon"><i class="bi bi-dash"></i></button>
+                        <button class="maddie-btn-icon"><i class="bi bi-x-lg"></i></button>
+                    </div>
+                </div>
+                <ul class="nav nav-tabs maddie-tab-buttons justify-content-center py-2">
+                    <li class="nav-item">
+                        <a class="nav-link active" data-bs-toggle="tab" href="#stats">Statis</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" data-bs-toggle="tab" href="#activity">Activity</a>
+                    </li>
+                    <li class="ms-auto me-3 maddie-tab-title">
+                        Activity
+                    </li>
+                </ul>
+                <div class="tab-content maddie-tab-content-area">
+                    <div class="tab-pane fade show active" id="stats">
+                        <div class="container">
+                            <div class="maddie-activity-card">
+                                <div class="maddie-card-left">
+                                    <div class="maddie-user-img">
+                                        <i class="bi bi-truck"></i>
+                                    </div>
+                                    <div class="maddie-user-info">
+                                        <h5><u>John Vicol</u></h5>
+                                        <small>165 Bbl</small>
+                                    </div>
+                                </div>
+                                <div class="maddie-card-right">
+                                    <div class="maddie-time-ago">14 mins ago</div>
+                                    <div class="mb-1">
+                                        <span class="maddie-time-label">Start:</span>
+                                        <span class="maddie-time-data">8.9&nbsp;&nbsp;10:35 <small>a.m.</small></span>
+                                    </div>
+                                    <div>
+                                        <span class="maddie-time-label">Finish:</span>
+                                        <span class="maddie-time-data">6.9&nbsp;&nbsp;11:06 <small>a.m.</small></span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="maddie-activity-card">
+                                <div class="maddie-card-left">
+                                    <div class="maddie-user-img">
+                                        <i class="bi bi-truck"></i>
+                                    </div>
+                                    <div class="maddie-user-info">
+                                        <h5><u>Zack Sands</u></h5>
+                                        <small>165 Bbl</small>
+                                    </div>
+                                </div>
+                                <div class="maddie-card-right">
+                                    <div class="maddie-time-ago">1 hr. 15 mins ago</div>
+                                    <div class="mb-1">
+                                        <span class="maddie-time-label">Start:</span>
+                                        <span class="maddie-time-data">11.5&nbsp;&nbsp;9:10 <small>a.m.</small></span>
+                                    </div>
+                                    <div>
+                                        <span class="maddie-time-label">Finish:</span>
+                                        <span class="maddie-time-data">8.6&nbsp;&nbsp;9:42 <small>a.m.</small></span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tab-pane fade" id="activity">
+                        <div class="container">
+                            <div class="maddie-status-container">
+                                <div class="d-flex flex-column align-items-center gap-3">
+                                    <img src="https://via.placeholder.com/120x120.png?text=Tank" alt="Tank Image" class="maddie-tank-img">
+                                    <div class="maddie-box-info">
+                                        <i class="bi bi-pencil-square maddie-edit-icon"></i>
+                                        <div><strong>24<sup>hr</sup> production:</strong> <span class="maddie-value">3,000</span></div>
+                                        <div><strong>Total Capacity:</strong> <span class="maddie-value">2,000</span></div>
+                                        <div><strong>High Level:</strong> <span class="text-danger">16.9</span></div>
+                                        <div><strong>Low Level:</strong> <span class="text-danger">4.0</span></div>
+                                    </div>
+                                </div>
+                                <div class="d-flex flex-column align-items-start gap-3">
+                                    <h4 class="text-primary fw-bold">Levels: <span class="text-dark">13.6</span></h4>
+                                    <button class="maddie-update-btn">Update</button>
+                                    <div class="mt-3">
+                                        <p><strong>API:</strong> 33105044020000</p>
+                                        <p><strong>Lat:</strong> 48.5170</p>
+                                        <p><strong>Long:</strong> -103.4741</p>
+                                        <p><strong>State:</strong> North Dakota</p>
+                                        <p><strong>County:</strong> Williams</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="maddie-bottom-bar">
+                    <span>Nick Williams</span>
+                    <span><em>701-223-5689</em></span>
+                    <span>Kraken</span>
+                </div>
+            </div>
+         </div>
+        <!-- maddie modal End  -->
     </div>
     <!-- main End -->
 
