maddie second tab complete design Hardik_maliya

--- a/dashboard.html
+++ b/dashboard.html
@@ -1689,25 +1689,27 @@
                     <div class="tab-pane h-100 fade" id="activity">
                         <div class="maddie-tab-container p-18 h-100 overflow-y-auto d-flex flex-column gap-24">
                             <div class="maddie-status-container">
-                                <div class="d-flex flex-column align-items-center gap-3">
-                                    <img src="https://via.placeholder.com/120x120.png?text=Tank" alt="Tank Image" class="maddie-tank-img">
-                                    <div class="maddie-box-info">
-                                        <i class="bi bi-pencil-square maddie-edit-icon"></i>
-                                        <div><strong>24<sup>hr</sup> production:</strong> <span class="maddie-value">3,000</span></div>
-                                        <div><strong>Total Capacity:</strong> <span class="maddie-value">2,000</span></div>
-                                        <div><strong>High Level:</strong> <span class="text-danger">16.9</span></div>
-                                        <div><strong>Low Level:</strong> <span class="text-danger">4.0</span></div>
+                                <div class="d-flex flex-column align-items-center gap-20 w-50">
+                                    <img src="./assets/image/maddie/tanks.png" alt="Tank Image" class="maddie-tank-img w-100 h-100 object-contant">
+                                    <div class="maddie-box-info p-8 w-100">
+                                        <!-- <i class="bi bi-pencil-square maddie-edit-icon"></i> -->
+                                        <div class='d-flex justify-content-between align-items-center gap-8 fs-12 text-black'><strong>24<sup>hr</sup> production:</strong> <span class="maddie-value">3,000</span></div>
+                                        <div class='d-flex justify-content-between align-items-center gap-8 fs-12 text-black'><strong>Total Capacity:</strong> <span class="maddie-value">2,000</span></div>
+                                        <div class='d-flex justify-content-between align-items-center gap-8 fs-12 text-black'><strong>High Level:</strong> <span class="text-danger text-danger">16.9</span></div>
+                                        <div class='d-flex justify-content-between align-items-center gap-8 fs-12 text-black'><strong>Low Level:</strong> <span class="text-danger text-danger">4.0</span></div>
                                     </div>
                                 </div>
-                                <div class="d-flex flex-column align-items-start gap-3">
-                                    <h4 class="text-primary fw-bold">Levels: <span class="text-dark">13.6</span></h4>
-                                    <button class="maddie-update-btn">Update</button>
-                                    <div class="mt-3">
-                                        <p><strong>API:</strong> 33105044020000</p>
-                                        <p><strong>Lat:</strong> 48.5170</p>
-                                        <p><strong>Long:</strong> -103.4741</p>
-                                        <p><strong>State:</strong> North Dakota</p>
-                                        <p><strong>County:</strong> Williams</p>
+                                <div class="d-flex flex-column align-items-start gap-20 w-50">
+                                    <div class="d-flex flex-column justify-content-center align-items-center gap-16">
+                                        <h4 class="text-primary fw-bold m-0">Levels: <span class="text-dark">13.6</span></h4>
+                                        <button class="maddie-update-btn">Update</button>
+                                    </div>
+                                    <div class="mt-3 w-100">
+                                        <p class="m-0 fs-14 d-flex justify-content-between align-items-center gap-8"><strong>API:</strong> 33105044020000</p>
+                                        <p class="m-0 fs-14 d-flex justify-content-between align-items-center gap-8"><strong>Lat:</strong> 48.5170</p>
+                                        <p class="m-0 fs-14 d-flex justify-content-between align-items-center gap-8"><strong>Long:</strong> -103.4741</p>
+                                        <p class="m-0 fs-14 d-flex justify-content-between align-items-center gap-8"><strong>State:</strong> North Dakota</p>
+                                        <p class="m-0 fs-14 d-flex justify-content-between align-items-center gap-8"><strong>County:</strong> Williams</p>
                                     </div>
                                 </div>
                             </div>
