--- a/disposal.html
+++ b/disposal.html
@@ -25,8 +25,8 @@
                 <span class="header-hamburger-icon d-block"></span>
             </div>
             <ul class="menu-list align-items-center d-flex list-inline">
-                <li class="menu-item py-10 px-12 p-lg-10 position-relative">
-                    <a href="javascript:void(0);" class="fw-medium fs-15 menu-link text-decoration-none">Log</a>
+                <li class="menu-item py-6 px-8 p-lg-10 position-relative">
+                    <a href="javascript:void(0);" class="fw-medium fs-14 menu-link text-decoration-none">Log</a>
                     <ul class="megamenu-list position-absolute list-inline bg-white pt-8 z-1 start-0">
                         <li class="megamenu-item">
                             <a href="#"
@@ -39,8 +39,8 @@
                         </li>
                     </ul>
                 </li>
-                <li class="menu-item py-10 px-12 p-lg-10 position-relative">
-                    <a href="#" class="fw-medium fs-15 menu-link text-decoration-none">Edit</a>
+                <li class="menu-item py-6 px-8 p-lg-10 position-relative">
+                    <a href="#" class="fw-medium fs-14 menu-link text-decoration-none">Edit</a>
                     <ul class="megamenu-list position-absolute list-inline bg-white pt-8 z-1 start-0">
                         <li class="megamenu-item">
                             <a href="#"
@@ -60,8 +60,8 @@
                         </li>
                     </ul>
                 </li>
-                <li class="menu-item py-10 px-12 p-lg-10 position-relative">
-                    <a href="#" class="fw-medium fs-15 menu-link text-decoration-none">Requests</a>
+                <li class="menu-item py-6 px-8 p-lg-10 position-relative">
+                    <a href="#" class="fw-medium fs-14 menu-link text-decoration-none">Requests</a>
                     <ul class="megamenu-list position-absolute list-inline bg-white pt-8 z-1 start-0">
                         <li class="megamenu-item">
                             <a href="#"
@@ -81,8 +81,8 @@
                         </li>
                     </ul>
                 </li>
-                <li class="menu-item py-10 px-12 p-lg-10 position-relative">
-                    <a href="#" class="fw-medium fs-15 menu-link text-decoration-none">Settings</a>
+                <li class="menu-item py-6 px-8 p-lg-10 position-relative">
+                    <a href="#" class="fw-medium fs-14 menu-link text-decoration-none">Settings</a>
                     <ul class="megamenu-list position-absolute list-inline bg-white pt-8 z-1 start-0">
                         <li class="megamenu-item">
                             <a href="#"
@@ -102,8 +102,8 @@
                         </li>
                     </ul>
                 </li>
-                <li class="menu-item py-10 px-12 p-lg-10 position-relative">
-                    <a href="#" class="fw-medium fs-15 menu-link text-decoration-none">Help</a>
+                <li class="menu-item py-6 px-8 p-lg-10 position-relative">
+                    <a href="#" class="fw-medium fs-14 menu-link text-decoration-none">Help</a>
                     <ul class="megamenu-list position-absolute list-inline bg-white pt-8 z-1 start-0">
                         <li class="megamenu-item">
                             <a href="#"
@@ -124,7 +124,7 @@
                     </ul>
                 </li>
             </ul>
-            <h2 class="header-title fs-32 fs-xl-25 fw-bold mb-0 text-center position-absolute" data-bs-target="#roseservice" data-bs-toggle="modal">JCV38 Corp</h2>
+            <h2 class="header-title fs-24 fs-xl-25 fw-bold mb-0 text-center position-absolute" data-bs-target="#roseservice" data-bs-toggle="modal">JCV38 Corp</h2>
             <h4
                 class="header-currect-job text-primary fs-16 fs-sm-14 fw-medium bg-white py-4 px-15 px-sm-10 mb-0 d-none me-10 me-sm-6">
                 Current job</h4>
@@ -141,17 +141,17 @@
         </div>
         <div class="header-m-content d-flex align-items-center justify-content-between">
             <div class="header-m-personal d-flex">
-                <div class="header-m-duty d-flex align-items-center me-40 pt-19 pb-10">
-                    <h5 class="header-duty-title fs-18 fw-bold text-center me-15 mb-0">Also <span
+                <div class="header-m-duty d-flex align-items-center me-40 py-10">
+                    <h5 class="header-duty-title fs-14 fw-bold text-center me-15 mb-0">Also <span
                             class="d-block mt-3">On-Duty:</span></h5>
                     <div class="header-duty-time">
-                        <h5 class="d-flex align-items-center fs-18 fw-bold">John<span class="fs-10">4hr 23min</span><img
+                        <h5 class="d-flex align-items-center fs-14 fw-bold">John<span class="fs-10">4hr 23min</span><img
                                 src="assets/image/mobile-Icon .svg" alt="Mobile icon"></h5>
-                        <h5 class="d-flex align-items-center fs-18 fw-bold mb-0">Greg<span class="fs-10">2hr 47
+                        <h5 class="d-flex align-items-center fs-14 fw-bold mb-0">Greg<span class="fs-10">2hr 47
                                 min</span><img src="assets/image/laptop-icon.svg" alt="Mobile icon"></h5>
                     </div>
                 </div>
-                <div class="header-m-available px-22 pt-18 pb-10">
+                <div class="header-m-available px-22 py-10">
                     <!-- <div class="header-available d-flex align-items-center justify-content-between mb-8">
                         <h5 class="fs-16 fw-bold mb-0 me-25">Trucks Available</h5>
                         <div class="form-check form-switch position-relative mb-0">
@@ -172,13 +172,13 @@
                         </div>
                     </div> -->
                     <div class="header-m-contact d-flex align-items-center px-0 pt-14 pb-10 border-0">
-                        <h5 class="fs-16 fw-bold mb-0 me-23 text-center lh-sm">Followers:</h5>
-                        <span class="fs-36 fw-bold d-flex align-items-center justify-content-center bg-white ">6</span>
+                        <h5 class="fs-14 fw-bold mb-0 me-23 text-center lh-sm">Followers:</h5>
+                        <span class="fs-24 fw-bold d-flex align-items-center justify-content-center bg-white ">6</span>
                     </div>
                 </div>
-                <div class="header-m-contact d-flex align-items-center px-16 pt-14 pb-10">
-                    <h5 class="fs-16 fw-bold mb-0 me-23 text-center lh-sm">Active Jobs:</h5>
-                    <span class="fs-36 fw-bold d-flex align-items-center justify-content-center bg-white ">2</span>
+                <div class="header-m-contact d-flex align-items-center px-16 py-10">
+                    <h5 class="fs-14 fw-bold mb-0 me-23 text-center lh-sm">Active Jobs:</h5>
+                    <span class="fs-24 fw-bold d-flex align-items-center justify-content-center bg-white ">2</span>
                 </div>
             </div>
             <div class="header-m-activity">
@@ -196,11 +196,12 @@
                         <span class="fs-15 fw-bold d-block mt-8">Calendar</span>
                     </li>
                     <li class="header-activity-item maintance-activity-btn text-center pt-14 px-10 pb-10" id="maintancessidebar">
-                        <img src="assets/image/maintance-icon.svg" alt="Maintance">
+                        <!-- <img src="assets/image/maintance-icon.svg" alt="Maintance"> -->
+                         <i class="fa-solid fa-screwdriver-wrench fs-24 text-primary"></i>
                         <span class="fs-15 fw-bold d-block mt-8">Maintance</span>
                     </li>
                     <li class="header-activity-btn">
-                        <button class="btn fs-20 fw-bold" id="jobcreationsidebar">Disposal</button>
+                        <button class="btn fs-18 fw-bold" id="jobcreationsidebar">Disposal</button>
                     </li>
                 </ul>
             </div>
@@ -344,10 +345,10 @@
     <!-- Header Bottom End -->
 
     <!-- main Start -->
-    <div class="main-content position-relative main-content-disposal">
+    <div class="main-content position-relative overflow-hidden main-content-disposal">
         <div class="dashboard-btn-list bg-white border border-2 py-30 px-14 d-inline-flex flex-column gap-20 position-absolute top-0 end-0 mt-12 me-100">
-            <button type="button" class="btn btn-listgroup border border-2 fw-bold fs-16 lh-1 py-10 px-18" data-bs-toggle="modal" data-bs-target="#jobbulletinbtnmodal">Bulletin</button>
-            <button type="button" class="btn btn-listgroup border border-2 fw-bold fs-16 lh-1 py-10 px-18">Contacts</button>
+            <button type="button" class="btn btn-listgroup border border-2 fw-bold fs-14 lh-1 py-8 px-18" data-bs-toggle="modal" data-bs-target="#jobbulletinbtnmodal">Bulletin</button>
+            <button type="button" class="btn btn-listgroup border border-2 fw-bold fs-14 lh-1 py-8 px-18">Contacts</button>
         </div>
         <div class='footer-line px-10 position-absolute h-100 start-0 border border-2'></div>
         <div class='map-body h-100 ms-auto'>
@@ -1929,7 +1930,7 @@
         <div class="calendar-container position-relative">
             <div class="calendar-header pt-12 px-22 pb-15">
                 <button class="calendar-month border-0 p-0 bg-transparent premonth" id="prevMonth"><img src="assets/image/calendar-sidebar/prev.svg" alt="Prev icon"></button>
-                <h2 id="monthYear" class="text-white fs-18 mb-0"></h2>
+                <h2 id="monthYear" class="text-white fs-18 mb-0" data-bs-toggle="modal" data-bs-target="#calenderdatemodal02"></h2>
                 <button class="calendar-month border-0 p-0 bg-transparent nextmonth" id="nextMonth"><img src="assets/image/calendar-sidebar/next.svg" alt="Next icon"></button>
             </div>
             <table class="calendar-table">
@@ -2941,6 +2942,103 @@
         </div>
     </div>
     <!-- manage invite modal End -->
+
+    <!-- calender Sent Modal -->
+    <div class="modal fade scheduled-status-modal" id="calenderdatemodal02" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="calenderdatemodal02Label" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content rounded-4">
+                <div class="modal-header justify-content-center position-relative calander-modal-header">
+                    <h1 class="modal-title fs-2 fw-bold fst-italic text-black lh-1 mb-0">
+                        <span class="text-decoration-underline">Dec</span> <sup>6<sup>th</sup></sup> 2023
+                    </h1>
+                    <button type="button" class="btn-close position-absolute top-0 end-0 mt-2 me-2" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class='calander-card-body p-16 text-center'>
+                  <div class="calander-card-container h-100 overflow-y-auto">
+                    <div class="calander-task-card">
+                      <div class="d-flex align-items-center gap-8 flex-shrink-0 py-10">
+                        <div class="calander-dot"></div>
+                        <div class="calander-name-time">
+                          <strong>Matt G.</strong>
+                          <div class="calander-time">03:15 a.m.</div>
+                        </div>
+                      </div>
+                      <div class="calander-desc text-start py-10">Meeting with Chris Goose Meeting with Chris Goose Meeting with Chris Goose Meeting with Chris Goose Meeting with Chris Goose</div>
+                      <button class="calander-remove-btn flex-shrink-0"><i class="fa-solid fa-xmark"></i></button>
+                    </div>
+                    <div class="calander-task-card">
+                      <div class="d-flex align-items-center gap-8 flex-shrink-0 py-10">
+                        <div class="calander-dot"></div>
+                        <div class="calander-name-time">
+                          <strong>Matt G.</strong>
+                          <div class="calander-time">03:15 a.m.</div>
+                        </div>
+                      </div>
+                      <div class="calander-desc text-start py-10">Goose Meeting with Chris Goos Goose</div>
+                      <button class="calander-remove-btn flex-shrink-0"><i class="fa-solid fa-xmark"></i></button>
+                    </div>
+                    <div class="calander-task-card">
+                      <div class="d-flex align-items-center gap-8 flex-shrink-0 py-10">
+                        <div class="calander-dot"></div>
+                        <div class="calander-name-time">
+                          <strong>Matt G.</strong>
+                          <div class="calander-time">03:15 a.m.</div>
+                        </div>
+                      </div>
+                      <div class="calander-desc text-start py-10">Meeting with Chris Goose Meeting with Chris Goose Meeting with Chris Goose Meeting with Chris Goose Meeting with Chris Goose</div>
+                      <button class="calander-remove-btn flex-shrink-0"><i class="fa-solid fa-xmark"></i></button>
+                    </div>
+                  </div>
+                  <button class="calander-add-button d-inline-flex justify-content-center align-items-center" data-bs-toggle="modal" data-bs-target="#typecalenderdatemodal02">ADD</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade scheduled-status-modal" id="typecalenderdatemodal02" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="typecalenderdatemodal02Label" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content rounded-4">
+                <div class="modal-header justify-content-center position-relative calander-modal-header">
+                    <h1 class="modal-title fs-2 fw-bold fst-italic text-black lh-1 mb-0">
+                        Dec 6th 2023
+                    </h1>
+                    <button type="button" class="btn-close position-absolute top-0 end-0 mt-2 me-2" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class='pt-16'>
+                    <span class='fs-16 text-black opacity-75'>Type Of Event</span>
+                </div>
+                <div class="calander-modal-headerbottom text-center mt-2 d-flex justify-content-center align-items-center gap-16 flex-wrap p-16">
+                    <button class="btn px-16 py-4 d-flex align-items-center gap-1 border-1 border-radius-3 border-secondary">
+                        <span class="dot bg-danger border-radius-circle d-inline-block" style="width: 10px; height: 10px;"></span> Repair
+                    </button>
+                    <button class="btn px-16 py-4 d-flex align-items-center gap-1 border-1 border-radius-3 border-secondary">
+                        <span class="dot bg-success border-radius-circle d-inline-block" style="width: 10px; height: 10px;"></span> Meeting
+                    </button>
+                    <button class="btn px-16 py-4 d-flex align-items-center gap-1 border-1 border-radius-3 border-secondary">
+                        <span class="dot bg-info border-radius-circle d-inline-block" style="width: 10px; height: 10px;"></span>Service
+                    </button>
+                </div>
+                <div class="modal-body text-center py-3">
+                    <!-- <p class="text-muted mb-3">Load of rock coming in...</p>
+                    <img src="./assets/image/check-sucess.svg" alt="Success" class="mb-3" style="width: 100px;"> -->
+
+                    <form class="account-comany-form" action="">
+                        <div class="jobmodal-textarea position-relative">
+                            <textarea type="text" class="form-control textInput text-start" rows="5" placeholder="Add Discription"></textarea>
+                            <p class="message m-0 mt-4 text-end position-absolute bottom-0 end-0 me-8">0/50</p>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer justify-content-center position-relative ps-4 pe-4 pt-0 border-0 text-start">
+                    <button class="calander-add-button d-inline-flex justify-content-center align-items-center" data-bs-toggle="modal" data-bs-target="#typecalenderdatemodal02">Done</button>
+                    <!-- <div class="small fs-12 text-muted position-absolute start-0 top-50 translate-middle-y ms-10">
+                        <strong>By: Greg Smith</strong><br> 12-10-23 <span class="text-danger">01:13 a.m.</span>
+                    </div>
+                    <p class="text-primary fs-40 fw-bold fst-italic m-0">Scheduled</p> -->
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- calender Sent End -->
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.14.0-beta3/css/bootstrap-select.min.css">
     <!-- JavaScript Files -->
